oviec/src/parser.rs
//! Parser for the Ovie programming language

use crate::ast::{
    AstNode, Statement, Expression, Literal, BinaryOperator, UnaryOperator,
    StructField, EnumVariant, FieldInitializer, Parameter,
    MatchArm, MatchPattern, UseItems, UseItem,
};
use crate::error::OvieError;
use crate::lexer::{Token, TokenType};

/// Result type for parsing operations
pub type ParseResult<T> = Result<T, OvieError>;

/// Parser for Ovie source code
pub struct Parser {
    tokens: Vec<Token>,
    current: usize,
}

impl Parser {
    /// Create a new parser with the given tokens
    pub fn new(tokens: Vec<Token>) -> Self {
        Self { tokens, current: 0 }
    }

    /// Parse the tokens into an AST
    pub fn parse(&mut self) -> ParseResult<AstNode> {
        let mut statements = Vec::new();

        while !self.is_at_end() {
            if self.check(&TokenType::Eof) {
                break;
            }
            statements.push(self.statement()?);
        }

        Ok(AstNode::new(statements))
    }

    /// Parse a statement
    fn statement(&mut self) -> ParseResult<Statement> {
        match &self.peek().token_type {
            TokenType::Fn => self.function_statement(),
            TokenType::SeeAm => self.print_statement(),
            TokenType::If => self.if_statement(),
            TokenType::While => self.while_statement(),
            TokenType::For => self.for_statement(),
            TokenType::Return => self.return_statement(),
            TokenType::Struct => self.struct_statement(),
            TokenType::Enum => self.enum_statement(),
            TokenType::Let => self.let_statement(),
            TokenType::Oya => self.let_statement(), // oya = immutable declaration (same as let)
            TokenType::Const => self.const_statement(),
            TokenType::Use => self.use_statement(),
            TokenType::Import => self.import_statement(),
            TokenType::Export => self.export_statement(),
            TokenType::Pub => self.pub_statement(),
            TokenType::Type => self.type_alias_statement(),
            TokenType::Unsafe => {
                // unsafe { ... } — parse as a transparent block (no safety enforcement in v2.3 interpreter)
                self.advance(); // consume 'unsafe'
                let body = self.block_statement()?;
                Ok(Statement::Block { statements: body })
            }
            TokenType::Match => {
                // match as a statement — parse as expression statement
                let expr = self.match_expression()?;
                self.consume_optional_semicolon();
                Ok(Statement::Expression { expression: expr })
            }
            TokenType::Break => {
                self.advance();
                self.consume_optional_semicolon();
                Ok(Statement::Break)
            }
            TokenType::Continue => {
                self.advance();
                self.consume_optional_semicolon();
                Ok(Statement::Continue)
            }
            TokenType::Mut => self.assignment_statement(true),
            TokenType::Identifier => {
                // impl Block { fn method(...) {} }
                // Desugar each method to a top-level fn: StructName_methodName(self, ...)
                if self.peek().lexeme == "impl" {
                    return self.impl_block();
                }
                // trait Foo { } — parse and discard (runtime doesn't need traits)
                if self.peek().lexeme == "trait" {
                    return self.skip_trait_block();
                }
                // Check for 'static' keyword (static mut IDENT: Type = expr)
                if self.peek().lexeme == "static" {
                    self.advance(); // consume 'static'
                    let mutable = self.match_token(&TokenType::Mut);
                    let identifier = self.consume_identifier("Expected variable name after 'static'")?;
                    if self.match_token(&TokenType::Colon) {
                        self.skip_type_annotation()?;
                    }
                    self.consume(&TokenType::Equal, "Expected '=' in static declaration")?;
                    let value = self.expression()?;
                    self.consume_optional_semicolon();
                    return Ok(Statement::VariableDeclaration { mutable, identifier, value });
                }
                // Look ahead to see if this is an assignment, compound assignment, or field mutation
                let next = self.tokens.get(self.current + 1).map(|t| &t.token_type);
                match next {
                    Some(TokenType::Equal) => self.assignment_statement(false),
                    Some(TokenType::PlusEqual) | Some(TokenType::MinusEqual)
                    | Some(TokenType::StarEqual) | Some(TokenType::SlashEqual) => {
                        self.compound_assignment_statement()
                    }
                    Some(TokenType::Dot) => {
                        // Check if this is field mutation: identifier.field = value
                        let mut lookahead = self.current + 2;
                        let mut found_mutation = false;
                        while lookahead < self.tokens.len() {
                            match &self.tokens[lookahead].token_type {
                                TokenType::Identifier => {
                                    if lookahead + 1 < self.tokens.len() {
                                        match &self.tokens[lookahead + 1].token_type {
                                            TokenType::Equal => {
                                                found_mutation = true;
                                                break;
                                            }
                                            TokenType::Dot => {
                                                lookahead += 2;
                                            }
                                            _ => break,
                                        }
                                    } else {
                                        break;
                                    }
                                }
                                _ => break,
                            }
                        }
                        if found_mutation {
                            return self.field_mutation_statement();
                        }
                        self.expression_statement()
                    }
                    _ => self.expression_statement(),
                }
            }
            _ => self.expression_statement(),
        }
    }

    /// Parse a function definition
    fn function_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Fn, "Expected 'fn'")?;
        
        let name = self.consume_identifier("Expected function name")?;

        // Skip optional generic type parameters: fn foo<T>(...) or fn foo<T, U>(...)
        if self.check(&TokenType::Less) {
            self.advance(); // consume '<'
            let mut depth = 1;
            while depth > 0 && !self.is_at_end() {
                if self.check(&TokenType::Less) { depth += 1; }
                if self.check(&TokenType::Greater) { depth -= 1; }
                self.advance();
            }
        }
        
        self.consume(&TokenType::LeftParen, "Expected '(' after function name")?;
        
        let mut parameters = Vec::new();
        if !self.check(&TokenType::RightParen) {
            loop {
                // Check for 'mut' keyword before parameter name
                let mutable = self.match_token(&TokenType::Mut);
                let param_name = self.consume_identifier("Expected parameter name")?;
                // Skip optional type annotation: param: Type
                if self.match_token(&TokenType::Colon) {
                    self.skip_type_annotation()?;
                }
                parameters.push(Parameter {
                    name: param_name,
                    mutable,
                });
                if !self.match_token(&TokenType::Comma) {
                    break;
                }
            }
        }
        
        self.consume(&TokenType::RightParen, "Expected ')' after parameters")?;
        
        // Skip optional return type annotation: -> Type
        if self.match_token(&TokenType::Arrow) {
            self.skip_type_annotation()?;
        }
        
        let body = self.block_statement()?;
        
        Ok(Statement::Function {
            name,
            parameters,
            body,
        })
    }

    /// Parse a print statement
    fn print_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::SeeAm, "Expected 'seeAm'")?;
        let expression = self.expression()?;
        // Ovie doesn't require semicolons after statements
        // Optional semicolon for compatibility
        if self.check(&TokenType::Semicolon) {
            self.advance();
        }
        
        Ok(Statement::Print { expression })
    }

   /// Parse an if statement
fn if_statement(&mut self) -> ParseResult<Statement> {
    self.consume(&TokenType::If, "Expected 'if'")?;
    
    // Handle `if let Pattern = expr` — treat as `if expr` (binding ignored for now)
    let condition = if self.check(&TokenType::Let) {
        self.advance(); // consume 'let'
        // Skip the pattern (could be Some(x), Some(&x), Ok(v), Err(e), etc.)
        // Consume tokens until we hit '=' at depth 0 (not inside parens/brackets)
        let mut depth = 0;
        while !self.is_at_end() {
            if self.check(&TokenType::LeftParen) || self.check(&TokenType::LeftBracket) {
                depth += 1;
                self.advance();
            } else if self.check(&TokenType::RightParen) || self.check(&TokenType::RightBracket) {
                if depth == 0 { break; }
                depth -= 1;
                self.advance();
            } else if self.check(&TokenType::Equal) && depth == 0 {
                break;
            } else if self.check(&TokenType::Ampersand) {
                // Handle & and &mut in patterns like Some(&id)
                self.advance();
                if self.check(&TokenType::Mut) {
                    self.advance();
                }
            } else {
                self.advance();
            }
        }
        self.consume(&TokenType::Equal, "Expected '=' in if let")?;
        self.expression()?
    } else {
        self.expression()?
    };
    
    let then_block = self.block_statement()?;
    
    let else_block = if self.match_token(&TokenType::Else) {
        // Check if this is 'else if' (chained if statement)
        if self.check(&TokenType::If) {
            // Parse the if statement as a single-statement else block
            // This allows 'else if' to work naturally through recursion
            Some(vec![self.if_statement()?])
        } else {
            // Regular else block with braces
            Some(self.block_statement()?)
        }
    } else {
        None
    };
    
    Ok(Statement::If {
        condition,
        then_block,
        else_block,
    })
}


    /// Parse a while statement
    fn while_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::While, "Expected 'while'")?;
        let condition = self.expression()?;
        let body = self.block_statement()?;
        
        Ok(Statement::While { condition, body })
    }

    /// Parse a for statement
    fn for_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::For, "Expected 'for'")?;
        
        // Handle tuple destructuring: for (a, b) in expr
        let identifier = if self.check(&TokenType::LeftParen) {
            self.advance(); // consume '('
            // Collect tuple elements
            let mut parts = Vec::new();
            while !self.check(&TokenType::RightParen) && !self.is_at_end() {
                if self.check(&TokenType::Identifier) {
                    parts.push(self.advance().lexeme.clone());
                } else {
                    // Accept keywords too
                    parts.push(self.advance().lexeme.clone());
                }
                if !self.match_token(&TokenType::Comma) {
                    break;
                }
            }
            self.consume(&TokenType::RightParen, "Expected ')' after tuple pattern")?;
            // Join with comma for now (interpreter will need to handle this)
            parts.join(",")
        } else if self.check(&TokenType::Identifier) {
            self.advance().lexeme.clone()
        } else {
            // Accept keywords as loop variable names (e.g., `import`, `use`, `type`)
            let tok = self.advance();
            tok.lexeme.clone()
        };
        
        self.consume(&TokenType::In, "Expected 'in' after loop variable")?;
        let iterable = self.expression()?;
        let body = self.block_statement()?;
        
        Ok(Statement::For {
            identifier,
            iterable,
            body,
        })
    }

    /// Parse a return statement
    fn return_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Return, "Expected 'return'")?;
        
        let value = if self.check(&TokenType::Semicolon) || self.check(&TokenType::RightBrace) {
            None
        } else {
            Some(self.expression()?)
        };
        
        self.consume_optional_semicolon();
        
        Ok(Statement::Return { value })
    }

    /// Parse a struct definition
    fn struct_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Struct, "Expected 'struct'")?;
        let name = self.consume_identifier("Expected struct name")?;
        
        self.consume(&TokenType::LeftBrace, "Expected '{' after struct name")?;
        
        let mut fields = Vec::new();
        while !self.check(&TokenType::RightBrace) && !self.is_at_end() {
            let field_name = self.consume_identifier("Expected field name")?;
            self.consume(&TokenType::Colon, "Expected ':' after field name")?;
            // Collect the full type annotation including generics like Vec<T>, Option<Vec<String>>
            let type_annotation = self.consume_type_annotation()?;
            
            fields.push(StructField {
                name: field_name,
                type_annotation,
            });
            
            if !self.match_token(&TokenType::Comma) {
                break;
            }
        }
        
        self.consume(&TokenType::RightBrace, "Expected '}' after struct fields")?;
        
        Ok(Statement::Struct { name, fields })
    }

    /// Consume a full type annotation as a string, including generics, references, and slices
    fn consume_type_annotation(&mut self) -> ParseResult<String> {
        let mut type_str = String::new();

        // Handle reference types: &T or &mut T
        if self.check(&TokenType::Ampersand) {
            self.advance();
            type_str.push('&');
            if self.check(&TokenType::Mut) {
                self.advance();
                type_str.push_str("mut ");
            }
            let inner = self.consume_type_annotation()?;
            type_str.push_str(&inner);
            return Ok(type_str);
        }

        // Handle tuple types: (T, U)
        if self.check(&TokenType::LeftParen) {
            self.advance();
            type_str.push('(');
            while !self.check(&TokenType::RightParen) && !self.is_at_end() {
                type_str.push_str(&self.consume_type_annotation()?);
                if self.check(&TokenType::Comma) {
                    self.advance();
                    type_str.push_str(", ");
                } else {
                    break;
                }
            }
            if self.check(&TokenType::RightParen) { self.advance(); }
            type_str.push(')');
            return Ok(type_str);
        }

        // Handle slice/array types: [T]
        if self.check(&TokenType::LeftBracket) {
            self.advance();
            type_str.push('[');
            type_str.push_str(&self.consume_type_annotation()?);
            if self.check(&TokenType::Semicolon) {
                self.advance();
                type_str.push(';');
                if self.check(&TokenType::IntegerLiteral) {
                    type_str.push_str(&self.advance().lexeme.clone());
                }
            }
            if self.check(&TokenType::RightBracket) { self.advance(); }
            type_str.push(']');
            return Ok(type_str);
        }

        // Consume base type name (may be path like std::core::Vec)
        if self.check(&TokenType::Identifier) {
            type_str.push_str(&self.advance().lexeme.clone());
            while self.check(&TokenType::ColonColon) {
                self.advance();
                type_str.push_str("::");
                if self.check(&TokenType::Identifier) {
                    type_str.push_str(&self.advance().lexeme.clone());
                }
            }
        }
        // Handle generic params <T, U, ...> with nesting
        if self.check(&TokenType::Less) {
            self.advance();
            type_str.push('<');
            let mut depth = 1;
            while depth > 0 && !self.is_at_end() {
                match self.peek().token_type {
                    TokenType::Less => {
                        depth += 1;
                        type_str.push('<');
                        self.advance();
                    }
                    TokenType::Greater => {
                        depth -= 1;
                        type_str.push('>');
                        self.advance();
                    }
                    TokenType::Comma => {
                        type_str.push_str(", ");
                        self.advance();
                    }
                    TokenType::Identifier => {
                        type_str.push_str(&self.advance().lexeme.clone());
                    }
                    TokenType::ColonColon => {
                        type_str.push_str("::");
                        self.advance();
                    }
                    TokenType::Ampersand => {
                        type_str.push('&');
                        self.advance();
                    }
                    _ => { self.advance(); }
                }
            }
        }
        if type_str.is_empty() {
            // Return unit type rather than error — allows bare () return types
            return Ok("()".to_string());
        }
        Ok(type_str)
    }

    /// Parse an enum definition
    fn enum_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Enum, "Expected 'enum'")?;
        let name = self.consume_identifier("Expected enum name")?;
        
        self.consume(&TokenType::LeftBrace, "Expected '{' after enum name")?;
        
        let mut variants = Vec::new();
        while !self.check(&TokenType::RightBrace) && !self.is_at_end() {
            let variant_name = self.consume_identifier("Expected variant name")?;
            
            let data_type = if self.match_token(&TokenType::LeftParen) {
                let type_name = self.consume_type_annotation()?;
                self.consume(&TokenType::RightParen, "Expected ')' after variant data type")?;
                Some(type_name)
            } else {
                None
            };
            
            variants.push(EnumVariant {
                name: variant_name,
                data_type,
            });
            
            if !self.match_token(&TokenType::Comma) {
                break;
            }
        }
        
        self.consume(&TokenType::RightBrace, "Expected '}' after enum variants")?;
        
        Ok(Statement::Enum { name, variants })
    }

    /// Parse an assignment statement
    fn assignment_statement(&mut self, mutable: bool) -> ParseResult<Statement> {
        if mutable {
            self.consume(&TokenType::Mut, "Expected 'mut'")?;
        }
        
        let identifier = self.consume_identifier("Expected variable name")?;
        
        // Skip optional type annotation: mut x: Type = expr
        if self.match_token(&TokenType::Colon) {
            self.skip_type_annotation()?;
        }
        
        self.consume(&TokenType::Equal, "Expected '=' in assignment")?;
        let value = self.expression()?;
        self.consume_optional_semicolon();
        
        Ok(Statement::Assignment {
            mutable,
            identifier,
            value,
        })
    }

    /// Parse a let statement: let [mut] identifier [: Type] = expression
    fn let_statement(&mut self) -> ParseResult<Statement> {
        // Accept both `let` and `oya` as immutable declaration keywords
        if self.check(&TokenType::Let) {
            self.advance();
        } else if self.check(&TokenType::Oya) {
            self.advance();
        } else {
            return Err(self.error("Expected 'let' or 'oya'"));
        }
        let mutable = self.match_token(&TokenType::Mut);
        
        // Handle tuple destructuring: let (a, b) = expr
        let identifier = if self.check(&TokenType::LeftParen) {
            self.advance(); // consume '('
            // Collect tuple elements
            let mut parts = Vec::new();
            while !self.check(&TokenType::RightParen) && !self.is_at_end() {
                parts.push(self.consume_identifier("Expected identifier in tuple pattern")?);
                if !self.match_token(&TokenType::Comma) {
                    break;
                }
            }
            self.consume(&TokenType::RightParen, "Expected ')' after tuple pattern")?;
            // Join with comma for now (interpreter will need to handle this)
            parts.join(",")
        } else {
            self.consume_identifier("Expected variable name")?
        };
        
        // Skip optional type annotation
        if self.match_token(&TokenType::Colon) {
            self.skip_type_annotation()?;
        }
        self.consume(&TokenType::Equal, "Expected '=' in let binding")?;
        let value = self.expression()?;
        self.consume_optional_semicolon();
        Ok(Statement::VariableDeclaration { mutable, identifier, value })
    }

    /// Parse a const declaration: const NAME [: Type] = expression
    fn const_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Const, "Expected 'const'")?;
        let name = self.consume_identifier("Expected constant name")?;
        if self.match_token(&TokenType::Colon) {
            self.skip_type_annotation()?;
        }
        self.consume(&TokenType::Equal, "Expected '=' in const declaration")?;
        let value = self.expression()?;
        self.consume_optional_semicolon();
        Ok(Statement::ConstDeclaration { name, value })
    }

    /// Parse a compound assignment: identifier op= expression
    fn compound_assignment_statement(&mut self) -> ParseResult<Statement> {
        let identifier = self.consume_identifier("Expected variable name")?;
        let operator = match &self.peek().token_type {
            TokenType::PlusEqual => { self.advance(); BinaryOperator::Add }
            TokenType::MinusEqual => { self.advance(); BinaryOperator::Subtract }
            TokenType::StarEqual => { self.advance(); BinaryOperator::Multiply }
            TokenType::SlashEqual => { self.advance(); BinaryOperator::Divide }
            _ => return Err(self.error("Expected compound assignment operator")),
        };
        let value = self.expression()?;
        self.consume_optional_semicolon();
        Ok(Statement::CompoundAssignment { identifier, operator, value })
    }

    /// Parse a use statement: use path::to::module or use path::{a, b} or use path as alias
    fn use_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Use, "Expected 'use'")?;
        let path = self.parse_module_path()?;
        
        let items = if self.match_token(&TokenType::As) {
            let alias = self.consume_identifier("Expected alias name")?;
            UseItems::Alias(alias)
        } else if self.check(&TokenType::ColonColon) {
            self.advance(); // consume ::
            if self.check(&TokenType::Star) {
                self.advance();
                UseItems::All
            } else if self.check(&TokenType::LeftBrace) {
                self.advance(); // consume {
                let mut items = Vec::new();
                while !self.check(&TokenType::RightBrace) && !self.is_at_end() {
                    let name = self.consume_identifier("Expected import name")?;
                    let alias = if self.match_token(&TokenType::As) {
                        Some(self.consume_identifier("Expected alias")?)
                    } else {
                        None
                    };
                    items.push(UseItem { name, alias });
                    if !self.match_token(&TokenType::Comma) {
                        break;
                    }
                }
                self.consume(&TokenType::RightBrace, "Expected '}'")?;
                UseItems::Named(items)
            } else {
                UseItems::Module
            }
        } else {
            UseItems::Module
        };
        
        self.consume_optional_semicolon();
        Ok(Statement::Use { path, items })
    }

    /// Parse an import statement: import "path"
    fn import_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Import, "Expected 'import'")?;
        let path = if self.check(&TokenType::StringLiteral) {
            let tok = self.advance();
            let raw = tok.lexeme.clone();
            self.parse_string_literal(&raw)?
        } else {
            self.consume_identifier("Expected import path")?
        };
        self.consume_optional_semicolon();
        Ok(Statement::Import { path })
    }

    /// Parse an export statement: export fn/struct/enum/const/use ...
    fn export_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Export, "Expected 'export'")?;
        // Handle `export use path::{...}` re-export syntax
        if self.check(&TokenType::Use) {
            let inner = self.use_statement()?;
            return Ok(Statement::Export { statement: Box::new(inner) });
        }
        let inner = self.statement()?;
        Ok(Statement::Export { statement: Box::new(inner) })
    }

    /// Parse a pub statement (treat as export)
    fn pub_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Pub, "Expected 'pub'")?;
        let inner = self.statement()?;
        Ok(Statement::Export { statement: Box::new(inner) })
    }

    /// Parse a type alias: type Name<T> = AliasedType<T>;
    fn type_alias_statement(&mut self) -> ParseResult<Statement> {
        self.consume(&TokenType::Type, "Expected 'type'")?;
        let name = self.consume_identifier("Expected type alias name")?;
        // Skip optional generic params like <T>
        if self.check(&TokenType::Less) {
            self.advance();
            let mut depth = 1;
            while !self.is_at_end() && depth > 0 {
                if self.check(&TokenType::Less) { depth += 1; }
                else if self.check(&TokenType::Greater) { depth -= 1; }
                self.advance();
            }
        }
        self.consume(&TokenType::Equal, "Expected '=' in type alias")?;
        let aliased_type = self.consume_type_annotation()?;
        self.consume_optional_semicolon();
        Ok(Statement::TypeAlias { name, aliased_type })
    }

    /// Parse a module path like std::core or ./loader
    fn parse_module_path(&mut self) -> ParseResult<Vec<String>> {
        let mut path = Vec::new();
        // Handle relative paths starting with ./ or ../
        if self.check(&TokenType::Dot) {
            self.advance();
            path.push(".".to_string());
            if self.check(&TokenType::Slash) {
                self.advance();
            }
        }
        if self.check(&TokenType::Identifier) {
            path.push(self.advance().lexeme.clone());
            while self.check(&TokenType::ColonColon) {
                // Peek ahead — only consume :: if followed by identifier (not { or *)
                let next_is_ident = self.tokens.get(self.current + 1)
                    .map(|t| matches!(t.token_type, TokenType::Identifier))
                    .unwrap_or(false);
                if !next_is_ident {
                    break; // leave :: for use_statement to handle
                }
                self.advance(); // consume ::
                if self.check(&TokenType::Identifier) {
                    path.push(self.advance().lexeme.clone());
                } else {
                    break;
                }
            }
        }
        Ok(path)
    }

    /// Skip a type annotation (identifier, possibly with generics, references, or slices)
    /// Handles: T, &T, &mut T, Vec<T>, Option<T>, Result<T,E>, (T, U), [T]
    fn skip_type_annotation(&mut self) -> ParseResult<()> {
        // Handle reference types: &T or &mut T
        if self.check(&TokenType::Ampersand) {
            self.advance(); // consume '&'
            // Optional 'mut'
            if self.check(&TokenType::Mut) {
                self.advance();
            }
            // Recurse to handle the inner type
            return self.skip_type_annotation();
        }

        // Handle tuple types: (T, U, ...)
        if self.check(&TokenType::LeftParen) {
            self.advance(); // consume '('
            while !self.check(&TokenType::RightParen) && !self.is_at_end() {
                self.skip_type_annotation()?;
                if !self.match_token(&TokenType::Comma) {
                    break;
                }
            }
            if self.check(&TokenType::RightParen) { self.advance(); }
            return Ok(());
        }

        // Handle slice/array types: [T] or [T; N]
        if self.check(&TokenType::LeftBracket) {
            self.advance(); // consume '['
            self.skip_type_annotation()?;
            // Optional '; N' for fixed-size arrays
            if self.check(&TokenType::Semicolon) {
                self.advance();
                if self.check(&TokenType::IntegerLiteral) { self.advance(); }
            }
            if self.check(&TokenType::RightBracket) { self.advance(); }
            return Ok(());
        }

        // consume the type name (could be path like std::core::Vec)
        if self.check(&TokenType::Identifier) {
            self.advance();
            while self.check(&TokenType::ColonColon) {
                self.advance();
                if self.check(&TokenType::Identifier) { self.advance(); }
            }
        }
        // skip generic params <T, U>
        if self.check(&TokenType::Less) {
            self.advance();
            let mut depth = 1;
            while depth > 0 && !self.is_at_end() {
                match &self.peek().token_type {
                    TokenType::Less => { depth += 1; self.advance(); }
                    TokenType::Greater => { depth -= 1; self.advance(); }
                    _ => { self.advance(); }
                }
            }
        }
        Ok(())
    }

    /// Consume an optional semicolon
    fn consume_optional_semicolon(&mut self) {
        if self.check(&TokenType::Semicolon) {
            self.advance();
        }
    }

    /// Parse a field mutation statement: object.field = value
    fn field_mutation_statement(&mut self) -> ParseResult<Statement> {
        // Parse the object (can be a simple identifier or nested field access)
        let mut object = Expression::Identifier(self.consume_identifier("Expected object name")?);
        
        // Parse field access chain
        let mut field_name = String::new();
        while self.match_token(&TokenType::Dot) {
            field_name = self.consume_identifier("Expected field name after '.'")?;
            
            // Check if there's another dot (nested field access)
            if self.check(&TokenType::Dot) {
                // Build up the object expression
                object = Expression::FieldAccess {
                    object: Box::new(object),
                    field: field_name.clone(),
                };
            } else {
                // This is the final field to mutate
                break;
            }
        }
        
        self.consume(&TokenType::Equal, "Expected '=' in field mutation")?;
        let value = self.expression()?;
        self.consume_optional_semicolon();
        
        Ok(Statement::FieldMutation {
            object,
            field: field_name,
            value,
        })
    }

    /// Parse an expression statement
    fn expression_statement(&mut self) -> ParseResult<Statement> {
        let expression = self.expression()?;
        self.consume_optional_semicolon();
        
        Ok(Statement::Expression { expression })
    }

    /// Parse a block statement
    fn block_statement(&mut self) -> ParseResult<Vec<Statement>> {
        self.consume(&TokenType::LeftBrace, "Expected '{'")?;
        
        let mut statements = Vec::new();
        while !self.check(&TokenType::RightBrace) && !self.is_at_end() {
            statements.push(self.statement()?);
        }
        
        self.consume(&TokenType::RightBrace, "Expected '}'")?;
        
        Ok(statements)
    }

    /// Parse an expression
    fn expression(&mut self) -> ParseResult<Expression> {
        self.logical_or()
    }

    /// Parse logical OR expression
    fn logical_or(&mut self) -> ParseResult<Expression> {
        let mut expr = self.logical_and()?;

        while self.match_token(&TokenType::OrOr) {
            let right = self.logical_and()?;
            expr = Expression::Binary {
                left: Box::new(expr),
                operator: BinaryOperator::Or,
                right: Box::new(right),
            };
        }

        Ok(expr)
    }

    /// Parse logical AND expression
    fn logical_and(&mut self) -> ParseResult<Expression> {
        let mut expr = self.equality()?;

        while self.match_token(&TokenType::AndAnd) {
            let right = self.equality()?;
            expr = Expression::Binary {
                left: Box::new(expr),
                operator: BinaryOperator::And,
                right: Box::new(right),
            };
        }

        Ok(expr)
    }

    /// Parse equality expression
    fn equality(&mut self) -> ParseResult<Expression> {
        let mut expr = self.comparison()?;

        while let Some(operator) = self.match_equality_operator() {
            let right = self.comparison()?;
            expr = Expression::Binary {
                left: Box::new(expr),
                operator,
                right: Box::new(right),
            };
        }

        Ok(expr)
    }

    /// Parse comparison expression
    fn comparison(&mut self) -> ParseResult<Expression> {
        let mut expr = self.range()?;

        while let Some(operator) = self.match_comparison_operator() {
            let right = self.range()?;
            expr = Expression::Binary {
                left: Box::new(expr),
                operator,
                right: Box::new(right),
            };
        }

        Ok(expr)
    }

    /// Parse range expression
    fn range(&mut self) -> ParseResult<Expression> {
        let mut expr = self.term()?;

        if self.match_token(&TokenType::DotDot) {
            let end = self.term()?;
            expr = Expression::Range {
                start: Box::new(expr),
                end: Box::new(end),
            };
        }

        Ok(expr)
    }

    /// Parse term expression (addition/subtraction)
    fn term(&mut self) -> ParseResult<Expression> {
        let mut expr = self.factor()?;

        while let Some(operator) = self.match_term_operator() {
            let right = self.factor()?;
            expr = Expression::Binary {
                left: Box::new(expr),
                operator,
                right: Box::new(right),
            };
        }

        Ok(expr)
    }

    /// Parse factor expression (multiplication/division)
    fn factor(&mut self) -> ParseResult<Expression> {
        let mut expr = self.unary()?;

        while let Some(operator) = self.match_factor_operator() {
            let right = self.unary()?;
            expr = Expression::Binary {
                left: Box::new(expr),
                operator,
                right: Box::new(right),
            };
        }

        Ok(expr)
    }

    /// Parse unary expression
    fn unary(&mut self) -> ParseResult<Expression> {
        // Handle &mut expr and &expr — consume the reference syntax transparently.
        // Ovie passes values by reference at the call site; the & / &mut are hints
        // that the runtime handles automatically, so we just return the inner expr.
        if self.check(&TokenType::Ampersand) {
            self.advance(); // consume '&'
            // Optionally consume 'mut' after '&'
            if self.check(&TokenType::Mut) {
                self.advance(); // consume 'mut'
            }
            return self.unary();
        }

        if let Some(operator) = self.match_unary_operator() {
            let operand = self.unary()?;
            return Ok(Expression::Unary {
                operator,
                operand: Box::new(operand),
            });
        }

        self.primary()
    }
